# RobustBrachy

./: README.md  environment_cpu.yml  environment_gpu.yml  example_explore_robust_optimised_plan.py  example_nominal_plan_analysis_cpu.py  example_nominal_plan_analysis_gpu.py  example_robust_evaluation_cpu.py  example_robust_evaluation_gpu.py  example_robust_optimiser_cpu.py  example_robust_optimiser_gpu.py  pyproject.toml
Example Plan/: DO001.dcm  PL001.dcm  SS001.dcm
HDR_prostate_robust_app/: HDR_prostate_robust_app.py
HDR_prostate_robust_app/pages/: 1_1)_Nominal_Plan_Analysis.py  2_2)_Single_Plan_Robust_Evaluation.py  3_3)_Robust_Optimisation.py  4_3_a)_Select_Best_Plan.py  5_3_b)_Isodose_Plots.py  6_3_c)_DVH_Plots.py  7_3_d)_Export_Plan.py
source data/: 192ir-hdr_gammamed_plus.xls
src/robustbrachy/robustevaluation/: data_extraction.py  display_results.py  fast_TG43_cpu.py  fast_TG43_gpu.py  robust_evaluation_cpu.py  robust_evaluation_gpu.py  run_robust_evaluation_cpu.py  run_robust_evaluation_gpu.py  simulations_cpu.py  simulations_gpu.py  utils_cpu.py  utils_gpu.py
src/robustbrachy/robustoptimisation/: dose_per_dwell_cpu.py  dose_per_dwell_gpu.py  evaluation_cpu.py  evaluation_gpu.py  generate_dicoms.py  initialise_population.py  robust_evaluation_vectorised_cpu.py  robust_evaluation_vectorised_gpu.py  robust_optimisation.py  run_robust_optimiser_cpu.py  run_robust_optimiser_gpu.py
